# simple-chat-fastapi

./: LICENSE  README.md  docker-compose.yaml
backend/: .dockerignore  alembic.ini  database.db  pyproject.toml  server.py
backend/ipynbs/: send-message.ipynb
backend/migrations/: env.py
backend/migrations/versions/: d603de1ed05e_init.py
backend/src/: .env.example  app.py  config.py  dependencies.py  exceptions.py  utils.py
backend/src/core/: redis_client.py
backend/src/database/: db.py  models.py
backend/src/database/models/: message.py  user.py
backend/src/routes/: chat.py
backend/src/schemas/: config.py  message.py  user.py
backend/tests/: conftest.py  test.db
backend/tests/test_api/: test_change_password.py  test_sign_up.py  test_token.py
backend/tests/test_auth/: test_jwt.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/chat/: Chat.jsx
frontend/src/components/: Message.jsx  User.jsx
frontend/src/components/Auth/: AuthForms.jsx  AuthForms.module.css  AuthProvider.jsx  AuthenticationPage.jsx
frontend/src/components/Message/: Message.jsx  Message.module.css
frontend/src/components/User/: User.jsx  User.module.css
frontend/src/config/: api.js
frontend/src/hooks/: useApi.js  useWebSocket.js
frontend/src/layout/: Layout.jsx
frontend/src/pages/: ChatPage.jsx
frontend/src/pages/ChatPage/: ChatInput.jsx  ChatPage.jsx  (+3 more)
frontend/src/utils/: dateUtils.js
